Fixed margin layout problem

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap';
 
 .navbar {
-    background-color: black!important;
+    background-color: black !important;
 }
 
 .nav-link{
@@ -34,6 +34,7 @@
 html,
 body {
   height: 100%;
+  margin: 0 !important;
 }
 
 #page-content {
